vertical spacing fixed

--- a/src/alefba-src/src/stylesheets/abilities-section.scss
+++ b/src/alefba-src/src/stylesheets/abilities-section.scss
@@ -99,6 +99,7 @@
   font-style: normal;
   font-weight: normal;
   font-size: 1vw;
+  margin-top: -0.25vw;
   width: 17.5vw;
 }
 
