--- a/src/harf-src/src/stylesheets/abilities-section.scss
+++ b/src/harf-src/src/stylesheets/abilities-section.scss
@@ -96,6 +96,7 @@
   font-style: normal;
   font-weight: normal;
   font-size: 1vw;
+  margin-top: -0.25vw;
   width: 19vw;
 }
 
